отредактировал заголовок слайдера

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <h4 class="slider__tile">
+              <h4 class="slider__title">
                 Non lasciate che l'infezione penetri all'interno!
               </h4>
               <img class="slider__img" src="./src/img/slide.jpg" alt="#" />
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <h4 class="slider__tile">
+              <h4 class="slider__title" class="slider__tile">
                 Non lasciate che l'infezione penetri all'interno!
               </h4>
               <img class="slider__img" src="./src/img/slide.jpg" alt="#" />
