справил ошибку в title слайдера

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <h4 class="slider__tile">
+              <h4 class="slider__title">
                 Non lasciate che l'infezione penetri all'interno!
               </h4>
               <img class="slider__img" src="./src/img/slide.jpg" alt="#" />
@@ -145,7 +145,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <h4 class="slider__tile">
+              <h4 class="slider__title">
                 Non lasciate che l'infezione penetri all'interno!
               </h4>
               <img class="slider__img" src="./src/img/slide.jpg" alt="#" />
