поправил ошибки валидации

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h3 class="order__text">
             Protezione affidabile contro virus e batteri per tutta la famiglia!
           </h3>
-          <form class="oreder__form" action="">
+          <form class="oreder__form" action="test.php">
             <input
               class="order__input oreder__input--name"
               type="text"
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <h4 class="slider__title" class="slider__tile">
+              <h4 class="slider__title">
                 Non lasciate che l'infezione penetri all'interno!
               </h4>
               <img class="slider__img" src="./src/img/slide.jpg" alt="#" />
@@ -170,6 +170,10 @@
         </div>
 
         <!-- Attantion -->
+        <section class="attantion">
+          <h4 class="attantion__title">ATTENZIONE:</h4>
+          <p class="attention__description">non stai rischiando nulla!</p>
+        </section>
       </div>
     </div>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
