--- a/index.html
+++ b/index.html
@@ -164,8 +164,6 @@
               </div>
             </div>
           </div>
-
-          <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
         </div>
 
@@ -174,6 +172,24 @@
           <h4 class="attantion__title">ATTENZIONE:</h4>
           <p class="attention__description">non stai rischiando nulla!</p>
         </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+          <p class="footer__text">
+            Tutti i nostri prodotti sono conformi ai principali standard di
+            qualità europea e vengono sottoposti a un controllo approfondito
+            prima della spedizione.
+          </p>
+          <p class="footer__text">
+            Per motivi di sicurezza, tutti i pacchetti sono disinfettati e solo
+            successivamente vengono inviati al destinatario. Tutte le
+            manipolazioni con i prodotti vengono eseguite in speciali tute
+            protettive.
+          </p>
+          <p class="footer__text">
+            Noi rispettiamo tutti i requisiti del Ministero della Salute.
+          </p>
+        </footer>
       </div>
     </div>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
